--- a/GuiApp/kv/editSnacksScreen.kv
+++ b/GuiApp/kv/editSnacksScreen.kv
@@ -1,13 +1,25 @@
 #:kivy 2.1.0     
 
-<EditSnacksScreenContent>:
-    rows: 1
-    size_hint: (1, 1)
-    padding: '20dp'
-    ClickableTable:
-        id: snacksTable
-        headerHeight: self.width / 15
-        entryHeight: self.width / 15
-        columns: ["Snack name", "Quantity", "Price", "Image ID"]
-        columnExamples: ["Long snack name", "100", "43.43", "AnImageId"]
-        onEntryPressed: root.onEntryPressed
+<EditSnacksScreen>:
+    rows: 2
+    cols: 1
+    NavigationHeader:
+        id: header
+        use_settings_button: False
+        page_name: "Edit Snacks"
+    GridLayout:
+        rows: 1
+        padding: '20dp'
+        canvas:
+            Color:
+                rgba: app.colors["background"]
+            Rectangle:
+                pos: self.pos
+                size: self.size
+        ClickableTable:
+            id: snacksTable
+            headerHeight: self.width / 15
+            entryHeight: self.width / 15
+            columns: ["Snack name", "Quantity", "Price", "Image ID"]
+            columnExamples: ["Long snack name", "100", "43.43", "AnImageId"]
+            onEntryPressed: root.onEntryPressed
