--- a/GuiApp/kv/editSystemSettingsScreen.kv
+++ b/GuiApp/kv/editSystemSettingsScreen.kv
@@ -174,6 +174,7 @@
             rows: 1
             padding: 10
             ScrollView:
+                id: settingsScrollView
                 do_scroll_x: False
                 GridLayout:
                     id: settingsLayout
