feat(app): ✨ Remove redundant inheritence from kv-files

--- a/GuiApp/kv/adminScreen.kv
+++ b/GuiApp/kv/adminScreen.kv
@@ -12,7 +12,7 @@
     image_path: 'Images/user.png'
     text: 'Edit users'
 
-<AdminScreen@GridLayoutScreen>:
+<AdminScreen>:
     rows: 2
     cols: 1
     NavigationHeader:
