feat(app): ✨ Return to previous screen after top up

--- a/GuiApp/kv/insufficientFundsPopup.kv
+++ b/GuiApp/kv/insufficientFundsPopup.kv
@@ -38,11 +38,11 @@
                 width: self.parent.width / 2.5
                 height: self.width / 3
                 text_size: self.height / 2
-                on_press: root.on_top_up_pressed()
+                on_press: root.on_top_up()
             Widget: # Horizontal Spacer
             SmallOrangeButton:
                 text: "Close"
                 width: self.parent.width / 2.5
                 height: self.width / 3
                 text_size: self.height / 2
-                on_press: root.on_close_pressed()
+                on_press: root.on_close()
