feat(app): ✨ Remove redundant button sizes

--- a/GuiApp/kv/buyScreen.kv
+++ b/GuiApp/kv/buyScreen.kv
@@ -77,14 +77,14 @@
                 rows: 1
                 size_hint: (0.5, None)
                 height: self.minimum_height
-                SmallGreenButton:
+                GreenButton:
                     text: "Buy"
                     width: self.parent.width / 2.5
                     height: self.width / 3
                     text_size: self.height / 2
                     on_press: root.onBuy()
                 Widget: # Horizontal Spacer
-                SmallOrangeButton:
+                OrangeButton:
                     text: "Cancel"
                     width: self.parent.width / 2.5
                     height: self.width / 3
