--- a/GuiApp/kv/createUserOrLinkCardPopup.kv
+++ b/GuiApp/kv/createUserOrLinkCardPopup.kv
@@ -45,7 +45,7 @@
                     size_hint_y: None
                     height: self.minimum_height
                     Widget: # Horizontal Spacer
-                    SmallGreenButton:
+                    GreenButton:
                         width: self.parent.width / 2
                         height: self.width / 3
                         text_size: self.height / 2
@@ -92,7 +92,7 @@
                     size_hint_y: None
                     height: self.minimum_height
                     Widget: # Horizontal Spacer
-                    SmallGreenButton:
+                    GreenButton:
                         width: self.parent.width / 2
                         height: self.width / 3
                         text_size: self.height / 2
@@ -109,7 +109,7 @@
             size_hint_y: None
             height: self.minimum_height
             Widget: # Horizontal Spacer
-            SmallOrangeButton:
+            OrangeButton:
                 width: self.parent.width / 4
                 height: self.width / 3
                 text_size: self.height / 2
