--- a/GuiApp/kv/linkCardConfirmationPopup.kv
+++ b/GuiApp/kv/linkCardConfirmationPopup.kv
@@ -38,14 +38,14 @@
             rows: 1
             size_hint: (1, None)
             height: self.minimum_height
-            MediumGreenButton:
+            GreenButton:
                 text: "Confirm"
                 width: self.parent.width / 4
                 height: self.width / 3
                 text_size: self.height / 2
                 on_press: root.onConfirm()
             Widget: # Horizontal Spacer
-            MediumOrangeButton:
+            OrangeButton:
                 text: "Cancel"
                 width: self.parent.width / 4
                 height: self.width / 3
