--- a/GuiApp/kv/linkCardScreen.kv
+++ b/GuiApp/kv/linkCardScreen.kv
@@ -53,7 +53,7 @@
                     size_hint: (1, None)
                     height: self.minimum_height
                     orientation: 'rl-tb'
-                    MediumOrangeButton:
+                    OrangeButton:
                         text: "Cancel"
                         width: self.parent.width / 4
                         height: self.width / 3
