--- a/GuiApp/kv/wheelOfSnacksScreen.kv
+++ b/GuiApp/kv/wheelOfSnacksScreen.kv
@@ -46,7 +46,7 @@
                 size_hint_y: None
                 height: self.minimum_height
                 Widget:
-                SmallGreenButton:
+                GreenButton:
                     id: spin_button
                     text: "Spin!"
                     width: self.parent.width / 2
