--- a/GuiApp/kv/addSnackScreen.kv
+++ b/GuiApp/kv/addSnackScreen.kv
@@ -51,14 +51,14 @@
                 size_hint: (1, None)
                 height: self.minimum_height
                 Widget: # Horizontal Spacer
-                SmallGreenButton:
+                GreenButton:
                     text: "Confirm"
                     width: self.parent.width / 2.5
                     height: self.width / 3
                     text_size: self.height / 2
                     on_press: root.onConfirm()
                 Widget: # Horizontal Spacer
-                SmallOrangeButton:
+                OrangeButton:
                     text: "Cancel"
                     width: self.parent.width / 2.5
                     height: self.width / 3
