--- a/GuiApp/kv/createUserScreen.kv
+++ b/GuiApp/kv/createUserScreen.kv
@@ -61,14 +61,20 @@
             Widget: # Horizontal Spacer
                 size_hint: (1, None)
                 height: 100
-            LargeGreenButton:
+            GreenButton:
                 text: "Register"
+                width: self.parent.width / 3
+                height: self.width / 3
+                text_size: self.height / 2
                 on_press: root.registerUser()
             Widget: # Horizontal Spacer
                 size_hint: (1, None)
                 height: 100
-            LargeOrangeButton:
+            OrangeButton:
                 text: "Cancel"
+                width: self.parent.width / 3
+                height: self.width / 3
+                text_size: self.height / 2
                 on_press: root.cancel()
             Widget: # Horizontal Spacer
                 size_hint: (1, None)
