--- a/GuiApp/kv/editSnackScreen.kv
+++ b/GuiApp/kv/editSnackScreen.kv
@@ -51,21 +51,21 @@
             size_hint: (1, None)
             height: self.minimum_height
             Widget: # Horizontal Spacer
-            MediumGreenButton:
+            GreenButton:
                 text: "Confirm"
                 width: self.parent.width / 4
                 height: self.width / 3
                 text_size: self.height / 2
                 on_press: root.onConfirm()
             Widget: # Horizontal Spacer
-            MediumOrangeButton:
+            OrangeButton:
                 text: "Cancel"
                 width: self.parent.width / 4
                 height: self.width / 3
                 text_size: self.height / 2
                 on_press: root.onCancel()
             Widget: # Horizontal Spacer
-            MediumRedButton:
+            RedButton:
                 text: "Remove"
                 width: self.parent.width / 4
                 height: self.width / 3
@@ -100,14 +100,14 @@
             size_hint: (1, None)
             height: self.minimum_height
             Widget: # Horizontal Spacer
-            MediumOrangeButton:
+            OrangeButton:
                 text: "Cancel"
                 width: self.parent.width / 3
                 height: self.width / 3
                 text_size: self.height / 2
                 on_press: root.onCancel()
             Widget: # Horizontal Spacer
-            MediumRedButton:
+            RedButton:
                 text: "Remove"
                 width: self.parent.width / 3
                 height: self.width / 3
