--- a/GuiApp/kv/errorMessagePopup.kv
+++ b/GuiApp/kv/errorMessagePopup.kv
@@ -26,7 +26,7 @@
             size_hint: (1, None)
             height: self.minimum_height
             orientation: 'rl-tb'
-            SmallOrangeButton:
+            OrangeButton:
                 text: "Close"
                 width: self.parent.width / 2
                 height: self.width / 3
