--- a/GuiApp/kv/purchaseSummaryPopup.kv
+++ b/GuiApp/kv/purchaseSummaryPopup.kv
@@ -117,7 +117,7 @@
             size_hint: (1, None)
             height: self.minimum_height
             orientation: 'rl-tb'
-            SmallOrangeButton:
+            OrangeButton:
                 text: "Close"
                 width: self.parent.width / 4
                 height: self.width / 3
