--- a/GuiApp/kv/topUpPaymentScreen.kv
+++ b/GuiApp/kv/topUpPaymentScreen.kv
@@ -62,7 +62,7 @@
                 rows: 1
                 size_hint: (1, None)
                 height: self.minimum_height
-                SmallGreenButton:
+                GreenButton:
                     width: self.parent.width / 2.5
                     height: self.width / 3
                     text_size: self.height / 2
@@ -71,7 +71,7 @@
                 Widget: # Horizontal Spacer
                     size_hint: (1, None)
                     height: 10
-                SmallOrangeButton:
+                OrangeButton:
                     width: self.parent.width / 2.5
                     height: self.width / 3
                     text_size: self.height / 2
