feat(app): ✨ Add Profile and User Statistics screens

--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -36,3 +36,5 @@
 #:include kv/wheelOfSnacksScreen.kv
 #:include kv/WinPopup.kv
 #:include kv/gambleSummaryPopup.kv
+#:include kv/ProfileScreen.kv
+#:include kv/UserStatisticsScreen.kv
