--- a/GuiApp/kv/mainUserScreen.kv
+++ b/GuiApp/kv/mainUserScreen.kv
@@ -12,9 +12,9 @@
     image_path: 'Images/money-income.png'
     text: 'Top-up'
 
-<HistoryOption>:
-    image_path: 'Images/time-past.png'
-    text: 'History'
+<ProfileOption>:
+    image_path: 'Images/user.png'
+    text: 'Profile'
 
 
 
@@ -45,5 +45,5 @@
             spacing: 30
             TopUpOption:
                 id: topUpOption
-            HistoryOption:
-                id: historyOption
+            ProfileOption:
+                id: profileOption
