feat(app): ✨ Implement remove confirmation popups for snacks and users, and add history clearing functionality

--- a/GuiApp/kv/editSystemSettingsScreen.kv
+++ b/GuiApp/kv/editSystemSettingsScreen.kv
@@ -47,6 +47,49 @@
                 source: 'Images/toggle-on.png'
         Widget: # Horizontal Spacer
 
+<ButtonOptionRow>:
+    rows: 1
+    size_hint: (1, None)
+    height: self.width / 12
+    padding: [20, 5]
+    canvas:
+        Color:
+            rgba: app.colors["secondary_background"]
+        SmoothRoundedRectangle:
+            pos: self.pos
+            size: self.size
+            radius: [(2, 2),(2, 2),(2, 2),(2, 2)]
+    canvas.before:
+        Color:
+            rgba: 0, 0, 0, 0.10
+        BoxShadow:
+            pos: self.pos
+            size: self.size
+            offset: 10, -10
+            blur_radius: 15
+            spread_radius: -5, -5
+            border_radius: 2, 2, 2, 2
+    Label:
+        id: optionName
+        text: "Option item"
+        text_size: self.size
+        halign: 'left'
+        valign: 'middle'
+        bold: True
+        font_size: self.height / 2
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'center'
+        size_hint_x: None
+        width: self.parent.height * 4
+        RedButton:
+            id: button
+            text: "Remove"
+            width: self.parent.width / 2
+            height: self.width / 3
+            text_size: self.height / 2
+            on_release: root.on_release()
+
 <FloatSettingRow>:
     rows: 1
     size_hint: (1, None)
