--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -38,3 +38,4 @@
 #:include kv/gambleSummaryPopup.kv
 #:include kv/ProfileScreen.kv
 #:include kv/UserStatisticsScreen.kv
+#:include kv/removeConfirmationPopup.kv
