--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -28,6 +28,7 @@
 #:include kv/uiElements/WheelOfSnacksWidget.kv
 #:include kv/uiElements/ParticleEmitter.kv
 #:include kv/uiElements/navigationHeader.kv
+#:include kv/uiElements/StatsWidgets.kv
 #:include kv/editSystemSettingsScreen.kv
 #:include kv/insufficientFundsPopup.kv
 #:include kv/createUserOrLinkCardPopup.kv
@@ -39,3 +40,4 @@
 #:include kv/ProfileScreen.kv
 #:include kv/UserStatisticsScreen.kv
 #:include kv/removeConfirmationPopup.kv
+#:include kv/StoreStatisticsScreen.kv
