feat(app): ✨ Track edited snacks

--- a/GuiApp/kv/StoreStatisticsScreen.kv
+++ b/GuiApp/kv/StoreStatisticsScreen.kv
@@ -35,7 +35,7 @@
                 stat_value_2: "-1 Credits"
             DoubleStatWidget:
                 id: lost_stats
-                stat_name: "Lost"
+                stat_name: "Lost/Stolen"
                 stat_value_1: "-1 Snacks"
                 stat_value_2: "-1 Credits"
             DoubleStatWidget:
