--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -41,3 +41,5 @@
 #:include kv/UserStatisticsScreen.kv
 #:include kv/removeConfirmationPopup.kv
 #:include kv/StoreStatisticsScreen.kv
+#:include kv/removalReasonPopup.kv
+#:include kv/AddedSnackPricePopup.kv
