feat(app): ✨ Enhance Store Statistics screen with detailed revenue stats

--- a/GuiApp/kv/StoreStatisticsScreen.kv
+++ b/GuiApp/kv/StoreStatisticsScreen.kv
@@ -43,8 +43,12 @@
                 stat_name: "Sold"
                 stat_value_1: "-1 Snacks"
                 stat_value_2: "-1 Credits"
-        SingleStatWidget:
+        TripleHeaderValueStatWidget:
             size_hint_x: 0.4
-            id: profit_stat
-            stat_name: "Total profit"
-            stat_value: "-1 Credits"
+            id: profit_stats
+            stat_name_1: "Store revenue"
+            stat_value_1: "-1 Credits"
+            stat_name_2: "Gambling revenue"
+            stat_value_2: "-1 Credits"
+            stat_name_3: "Total profits"
+            stat_value_3: "-1 Credits"
