--- a/GuiApp/kv/uiElements/StatsWidgets.kv
+++ b/GuiApp/kv/uiElements/StatsWidgets.kv
@@ -70,3 +70,58 @@
         font_size: max(self.height / 3, self.width / 9)
         align: "left"
         valign: "middle"
+
+<TripleHeaderValueStatWidget>:
+    rows: 6
+    cols: 1
+    padding: self.height / 20
+    canvas:
+        Color:
+            rgba: app.colors["secondary_background"]
+        SmoothRoundedRectangle:
+            pos: self.pos
+            size: self.size
+            radius: [(20, 20),(20, 20),(20, 20),(20, 20)]
+    canvas.before:
+        Color:
+            rgba: 0, 0, 0, 0.10
+        BoxShadow:
+            pos: self.pos
+            size: self.size
+            offset: 10, -10
+            blur_radius: 15
+            spread_radius: -5, -5
+            border_radius: 20, 20, 20, 20
+    Label:
+        text: root.stat_name_1
+        font_size: max(self.height / 3, self.width / 9)
+        align: "left"
+        valign: "middle"
+        bold: True
+    Label:
+        text: root.stat_value_1
+        font_size: max(self.height / 3, self.width / 9)
+        align: "left"
+        valign: "middle"
+    Label:
+        text: root.stat_name_2
+        font_size: max(self.height / 3, self.width / 9)
+        align: "left"
+        valign: "middle"
+        bold: True
+    Label:
+        text: root.stat_value_2
+        font_size: max(self.height / 3, self.width / 9)
+        align: "left"
+        valign: "middle"
+    Label:
+        text: root.stat_name_3
+        font_size: max(self.height / 3, self.width / 9)
+        align: "left"
+        valign: "middle"
+        bold: True
+    Label:
+        text: root.stat_value_3
+        font_size: max(self.height / 3, self.width / 9)
+        align: "left"
+        valign: "middle"
