fix(kv): 🐛 Correct casing for AddedSnackPricePopup inclusion

--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -42,4 +42,4 @@
 #:include kv/removeConfirmationPopup.kv
 #:include kv/StoreStatisticsScreen.kv
 #:include kv/removalReasonPopup.kv
-#:include kv/AddedSnackPricePopup.kv
+#:include kv/addedSnackPricePopup.kv
