--- a/GuiApp/kv/uiElements/StatsWidgets.kv
+++ b/GuiApp/kv/uiElements/StatsWidgets.kv
@@ -23,13 +23,13 @@
             border_radius: 20, 20, 20, 20
     Label:
         text: root.stat_name
-        font_size: max(self.height / 4, self.width / 12)
+        font_size: max(self.height / 2, self.width / 12)
         align: "left"
         valign: "middle"
         bold: True
     Label:
         text: root.stat_value
-        font_size: max(self.height / 4, self.width / 12)
+        font_size: max(self.height / 2, self.width / 12)
         align: "left"
         valign: "middle"
 
@@ -70,6 +70,51 @@
         font_size: max(self.height / 3, self.width / 9)
         align: "left"
         valign: "middle"
+
+<DoubleHeaderValueStatWidget>:
+    rows: 6
+    cols: 1
+    padding: self.height / 20
+    canvas:
+        Color:
+            rgba: app.colors["secondary_background"]
+        SmoothRoundedRectangle:
+            pos: self.pos
+            size: self.size
+            radius: [(20, 20),(20, 20),(20, 20),(20, 20)]
+    canvas.before:
+        Color:
+            rgba: 0, 0, 0, 0.10
+        BoxShadow:
+            pos: self.pos
+            size: self.size
+            offset: 10, -10
+            blur_radius: 15
+            spread_radius: -5, -5
+            border_radius: 20, 20, 20, 20
+    Label:
+        text: root.stat_name_1
+        font_size: max(self.height / 3, self.width / 10)
+        align: "left"
+        valign: "middle"
+        bold: True
+    Label:
+        text: root.stat_value_1
+        font_size: max(self.height / 3, self.width / 10)
+        align: "left"
+        valign: "middle"
+    Label:
+        text: root.stat_name_2
+        font_size: max(self.height / 3, self.width / 10)
+        align: "left"
+        valign: "middle"
+        bold: True
+    Label:
+        text: root.stat_value_2
+        font_size: max(self.height / 3, self.width / 10)
+        align: "left"
+        valign: "middle"
+
 
 <TripleHeaderValueStatWidget>:
     rows: 6
