feat(app): ✨ Update user statistics labels and calculate total credits spent

--- a/GuiApp/kv/UserStatisticsScreen.kv
+++ b/GuiApp/kv/UserStatisticsScreen.kv
@@ -20,7 +20,7 @@
                 size: self.size
         SingleStatWidget:
             id: total_credits_spent
-            stat_name: "Total credits spent"
+            stat_name: "Credits spent"
             stat_value: "$123.45"
         SingleStatWidget:
             id: favorite_snack
@@ -28,9 +28,9 @@
             stat_value: "Chips"
         SingleStatWidget:
             id: total_snacks_purchased
-            stat_name: "Total snacks purchased"
+            stat_name: "Snacks purchased"
             stat_value: "67"
         SingleStatWidget:
             id: total_snacks_won
-            stat_name: "Total snacks won"
+            stat_name: "Snacks won"
             stat_value: "12"
