--- a/GuiApp/kv/addedSnackPricePopup.kv
+++ b/GuiApp/kv/addedSnackPricePopup.kv
@@ -26,7 +26,7 @@
             GridLayout:
                 cols: 1
                 Widget: # Vertical Spacer
-                LargeTextInputWithHeader:
+                TextInputWithHeader:
                     size_hint_x: 0.6
                     id: priceInput
                     size_factor: self.parent.width / 20
