--- a/GuiApp/kv/createUserScreen.kv
+++ b/GuiApp/kv/createUserScreen.kv
@@ -34,17 +34,17 @@
                 padding: [20, 20]
                 size_hint_y: None
                 height: self.minimum_height
-                LargeTextInputWithHeader:
+                TextInputWithHeader:
                     id: firstNameInput
                     size_factor: self.parent.width / 25
                     header_text: "First name"
                     hint_text: "Enter first name"
-                LargeTextInputWithHeader:
+                TextInputWithHeader:
                     id: lastNameInput
                     size_factor: self.parent.width / 25
                     header_text: "Last name"
                     hint_text: "Enter last name"
-                LargeTextInputWithHeader:
+                TextInputWithHeader:
                     id: cardIdInput
                     size_factor: self.parent.width / 25
                     header_text: "Login card"
