--- a/GuiApp/kv/editSnackScreen.kv
+++ b/GuiApp/kv/editSnackScreen.kv
@@ -28,18 +28,18 @@
                 spacing: self.width / 50
                 size_hint_y: None
                 height: self.minimum_height
-                LargeTextInputWithHeader:
+                TextInputWithHeader:
                     id: snackNameInput
                     size_factor: self.parent.width / 30
                     header_text: "Snack Name"
                     hint_text: "Enter snack name"
-                LargeTextInputWithHeader:
+                TextInputWithHeader:
                     id: snackQuantityInput
                     size_factor: self.parent.width / 30
                     header_text: "Quantity"
                     hint_text: "Enter quantity"
                     input_filter: "int"
-                LargeTextInputWithHeader:
+                TextInputWithHeader:
                     id: snackPriceInput
                     size_factor: self.parent.width / 30
                     header_text: "Price"
