--- a/GuiApp/kv/uiElements/textInputs.kv
+++ b/GuiApp/kv/uiElements/textInputs.kv
@@ -28,9 +28,6 @@
         disabled: root.disable_input
         height: self.minimum_height
 
-<LargeTextInputWithHeader>:
-    size_factor: 24
-
 <TextInputPopup>:
     size_hint: (0.9, 0.9)
     auto_dismiss: True
@@ -50,7 +47,7 @@
                 cols: 1
                 Widget: # Vertical Spacer
                     size_hint: (1, 0.4)
-                LargeTextInputWithHeader:
+                TextInputWithHeader:
                     size_factor: 48
                     id: textInput
                     enableVirtualKeyboardEntry: False
